fix to iframes on mobile devices

--- a/Resources/public/css/main.css
+++ b/Resources/public/css/main.css
@@ -1874,6 +1874,11 @@ ul.terms {
         display: none;
     }
 
+    iframe {
+        width: 100% !important;
+        height: auto !important;
+    }
+
     body, .bottom-header {
         -webkit-transition: all 0.3s;
         -moz-transition: all 0.3s;
